# MonitorSwitch

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
include/monitor_switch/: cli.hpp  ddc.hpp  inputs.hpp  menu.hpp  process.hpp  tui.hpp  version.hpp
src/: cli.cpp  ddc.cpp  inputs.cpp  main.cpp  menu.cpp  process.cpp  tui.cpp
tests/: CMakeLists.txt  fake_runner.hpp  test_cli.cpp  test_ddc.cpp  test_framework.hpp  test_inputs.cpp  test_main.cpp  test_menu.cpp  test_process.cpp
